codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__actions__delete_task_confirmation.snap
---
source: tui/src/app/agents_overview_actions_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 72)"
---
  Permanently delete “Current task”?
  This stops any running work in this task and its child agents, then
  permanently deletes their history. This cannot be undone.

› 1. Cancel
  2. Permanently delete task and child agents

  ↑/↓ choose · enter confirm · esc back
